# StampSlicer

./: .gitmodules  CMakeLists.txt  Makefile  windows.cmake
.github/workflows/: cmake.yml
cli/: CMakeLists.txt
cli/include/cli/: ErrorMessages.hpp  ParameterProcessor.hpp
cli/src/: CliTool.cpp  ParameterProcessor.cpp
core/: CMakeLists.txt
core/include/core/: LayerGanerator.hpp  SvgConverter.hpp
core/src/: LayerGanerator.cpp  SvgConverter.cpp
core/test/LayoutGeneratorTest/: CMakeLists.txt  LayoutGeneratorTest.cpp
core/test/SvgConverterTest/: CMakeLists.txt  SvgConverterTest.cpp
formats/: CMakeLists.txt
formats/include/formats/: Image.hpp  Packager.hpp  RLEEnoce.hpp
formats/include/formats/cbddlp/: FormatCbddlp.hpp
formats/include/formats/config/: PrinterConfig.hpp  ResinConfig.hpp
formats/src/: FormatCbddlp.cpp  Image.cpp  Packager.cpp  PrinterConfig.cpp  ResinConfig.cpp
formats/test/FormatCbddlpTest/: CMakeLists.txt  FormatCbddlpTest.cpp
formats/test/ImageTest/: CMakeLists.txt  ImageTest.cpp
inspector/: CMakeLists.txt
inspector/src/: Inspector.cpp
